Avoid z-index issues with track-changes comments and the editor splitter.

--- a/services/web/public/stylesheets/app/editor.less
+++ b/services/web/public/stylesheets/app/editor.less
@@ -378,11 +378,11 @@ CodeMirror
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: @ui-resizer-size !important;;	
+	width: @ui-resizer-size !important;
 	height: 50px;
 	margin-top: -25px;
 	top: 50%;
-	z-index: 6;
+	z-index: 3;
 	background-color: @editor-toggler-bg-color;
 
 	&:hover,
